K8S/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authservice
  template:
    metadata:
      labels:
        app: authservice
    spec:
      containers:
      - name: authservice
        image: oaddev/authservice:88f6241dc4715ff894afa5377f118a31f964c939
---
apiVersion: v1
kind: Service
metadata:
  name: auth-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: authservice
  ports:
  - name: authservice
    protocol: TCP
    port: 80
    targetPort: 80
