K8S/event-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-depl
  # namespace: eventease
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/"
    prometheus.io/port: "80"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eventservice
  template:
    metadata:
      labels:
        app: eventservice
    spec:
      containers:
      - name: eventservice
        image: oaddev/eventservice:f2838b421d5094e995c3a558afbb39a037183021
---
apiVersion: v1
kind: Service
metadata:
  name: event-clusterip-srv
  # namespace: eventease
spec:
  type: ClusterIP
  selector:
    app: eventservice
  ports:
  - name: eventservice
    protocol: TCP
    port: 80
    targetPort: 80
