K8S/rabbitmq-loadbalancer.yaml
# Allows access the Rabbit MQ management portal
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-loadbalancer
  namespace: eventease
spec:
  type: LoadBalancer
  selector:
    app: rabbitmq
  ports:
  - name: rbmq-mgmt-port
    protocol: TCP
    port: 15672
    targetPort: 15672
  - name: rbmq-msg-port
    protocol: TCP
    port: 5672
    targetPort: 5672
