K8S/search-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-depl
  # namespace: eventease
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/"
    prometheus.io/port: "80"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: searchservice
  template:
    metadata:
      labels:
        app: searchservice
    spec:
      containers:
      - name: searchservice
        image: oaddev/searchservice:78acdc389f0d5528fe4d55be38a1836dc0e8fbb9
---
apiVersion: v1
kind: Service
metadata:
  name: search-clusterip-srv
  # namespace: eventease
spec:
  type: ClusterIP
  selector:
    app: searchservice
  ports:
  - name: searchservice
    protocol: TCP
    port: 80
    targetPort: 80
