K8S/user-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-depl
  # namespace: eventease
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userservice
  template:
    metadata:
      labels:
        app: userservice
    spec:
      containers:
      - name: userservice
        image: oaddev/userservice:d15726c98b8d3d8a65897506ef94995ea1fb3f09
---
apiVersion: v1
kind: Service
metadata:
  name: user-clusterip-srv
  # namespace: eventease
spec:
  type: ClusterIP
  selector:
    app: userservice
  ports:
  - name: userservice
    protocol: TCP
    port: 80
    targetPort: 80
