K8S/ingress-azure.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-azure-srv
  namespace: eventease

  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    # - host: eventease.com
  - http:
      paths:
        - backend:
            service:
              name: auth-clusterip-srv
              port:
                number: 80
          path: /api/auth
          pathType: Prefix
          
        - backend:
            service:
              name: user-clusterip-srv
              port:
                number: 80
          path: /api/users
          pathType: Prefix
          
        - backend:
            service:
              name: event-clusterip-srv
              port:
                number: 80
          path: /api/events
          pathType: Prefix
          
        - backend:
            service:
              name: search-clusterip-srv
              port:
                number: 80
          path: /api/search/events
          pathType: Prefix
